--- a/.gitignore
+++ b/.gitignore
@@ -254,4 +254,4 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,django
-.idea.
+.idea/
